--- a/requirements.txt
+++ b/requirements.txt
@@ -1,122 +1,110 @@
 altair==4.2.0
 anyio
-argon2-cffi @ file:///opt/conda/conda-bld/argon2-cffi_1645000214183/work
-argon2-cffi-bindings @ file:///C:/ci/argon2-cffi-bindings_1644569848815/work
+argon2-cffi
+argon2-cffi-bindings
 attrs==22.1.0
-Babel @ file:///tmp/build/80754af9/babel_1620871417480/work
-backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
+Babel
+backcall
 backports.zoneinfo==0.2.1
-beautifulsoup4 @ file:///C:/ci/beautifulsoup4_1650292996413/work
-bleach @ file:///opt/conda/conda-bld/bleach_1641577558959/work
+beautifulsoup4
+bleach 
 blinker==1.5
 brotlipy==0.7.0
 cachetools==5.2.0
-certifi @ file:///C:/b/abs_ac29jvt43w/croot/certifi_1665076682579/work/certifi
-cffi @ file:///C:/Windows/Temp/abs_6808y9x40v/croots/recipe/cffi_1659598653989/work
+certifi 
+cffi 
 charset-normalizer==2.1.1
 click==8.1.3
-colorama @ file:///C:/Windows/TEMP/abs_9439aeb1-0254-449a-96f7-33ab5eb17fc8apleb4yn/croots/recipe/colorama_1657009099097/work
 commonmark==0.9.1
-cryptography @ file:///C:/ci/cryptography_1652101770956/work
+cryptography
 cycler==0.11.0
 debugpy==1.6.3
-decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
-defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
-entrypoints @ file:///C:/ci/entrypoints_1649926659561/work
+decorator 
+defusedxml 
+entrypoints 
 et-xmlfile==1.1.0
-fastjsonschema @ file:///C:/Users/BUILDE~1/AppData/Local/Temp/abs_ebruxzvd08/croots/recipe/python-fastjsonschema_1661376484940/work
+fastjsonschema 
 fonttools==4.37.1
 gitdb==4.0.9
 GitPython==3.1.27
-idna @ file:///C:/b/abs_bdhbebrioa/croot/idna_1666125572046/work
+idna
 importlib-metadata==4.12.0
 importlib-resources==5.9.0
-ipykernel @ file:///C:/b/abs_21ykzkm7y_/croots/recipe/ipykernel_1662361803478/work
+ipykernel
 ipython==7.34.0
-ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
+ipython-genutils
 ipywidgets==8.0.1
-jedi @ file:///C:/ci/jedi_1644297241925/work
-Jinja2==3.1.2
-joblib==1.1.0
-json5 @ file:///tmp/build/80754af9/json5_1624432770122/work
-jsonschema @ file:///C:/b/abs_59eyhnbyej/croots/recipe/jsonschema_1663375476535/work
-jupyter-server @ file:///C:/Windows/TEMP/abs_d3c42c59-765d-4f9b-9fa3-ad5b1369485611i_yual/croots/recipe/jupyter_server_1658754493238/work
-jupyter_client @ file:///C:/b/abs_8fbm7986b_/croots/recipe/jupyter_client_1662504374117/work
-jupyter_core @ file:///C:/b/abs_a9330r1z_i/croots/recipe/jupyter_core_1664917313457/work
-jupyterlab @ file:///C:/ci/jupyterlab_1658909377220/work
-jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
-jupyterlab-widgets==3.0.2
-jupyterlab_server @ file:///C:/ci/jupyterlab_server_1664911417714/work
+jedi 
+Jinja2==3.1.2 
 kiwisolver==1.4.4
-MarkupSafe @ file:///C:/ci/markupsafe_1654508076077/work
+MarkupSafe
 matplotlib==3.5.3
-matplotlib-inline @ file:///C:/ci/matplotlib-inline_1661934089728/work
-mistune @ file:///C:/ci/mistune_1594373272338/work
-nbclassic @ file:///opt/conda/conda-bld/nbclassic_1644943264176/work
-nbclient @ file:///C:/ci/nbclient_1650308542913/work
-nbconvert @ file:///C:/ci/nbconvert_1649759177374/work
-nbformat @ file:///C:/b/abs_1dw90o2uqb/croots/recipe/nbformat_1663744957967/work
-nest-asyncio @ file:///C:/ci/nest-asyncio_1649848126026/work
-notebook @ file:///C:/Windows/TEMP/abs_79abr1_60s/croots/recipe/notebook_1659083661851/work
+matplotlib-inline
+mistune
+nbclassic
+nbclient
+nbconvert 
+nbformat
+nest-asyncio
+notebook 
 numpy==1.21.6
 openpyxl==3.0.10
-packaging @ file:///tmp/build/80754af9/packaging_1637314298585/work
+packaging
 pandas==1.3.5
-pandocfilters @ file:///opt/conda/conda-bld/pandocfilters_1643405455980/work
-parso @ file:///opt/conda/conda-bld/parso_1641458642106/work
-pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
+pandocfilters
+parso
+pickleshare 
 Pillow==9.2.0
-pkgutil_resolve_name @ file:///C:/Users/BUILDE~1/AppData/Local/Temp/abs_81wm45v3kb/croots/recipe/pkgutil-resolve-name_1661463352381/work
-prometheus-client @ file:///C:/Windows/TEMP/abs_ab9nx8qb08/croots/recipe/prometheus_client_1659455104602/work
+pkgutil_resolve_name 
+prometheus-client 
 prompt-toolkit==3.0.30
 protobuf==3.20.1
 psutil==5.9.1
 pyarrow==9.0.0
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
+pycparser 
 pydeck==0.7.1
 Pygments==2.13.0
 Pympler==1.0.1
-pyOpenSSL @ file:///opt/conda/conda-bld/pyopenssl_1643788558760/work
-pyparsing @ file:///C:/Users/BUILDE~1/AppData/Local/Temp/abs_7f_7lba6rl/croots/recipe/pyparsing_1661452540662/work
+pyOpenSSL
+pyparsing 
 pyrsistent==0.18.1
-PySocks @ file:///C:/ci/pysocks_1594394709107/work
-python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
+PySocks
+python-dateutil 
 pytz==2022.2.1
 pytz-deprecation-shim==0.1.0.post0
 pywin32==304
-pywinpty @ file:///C:/ci_310/pywinpty_1644230983541/work/target/wheels/pywinpty-2.0.2-cp37-none-win_amd64.whl
+pywinpty
 pyzmq==23.2.1
 rainflow==3.1.1
-requests @ file:///C:/ci/requests_1657735288441/work
+requests
 rich==12.5.1
 scikit-learn==1.0.2
 scipy==1.7.3
 semver==2.13.0
-Send2Trash @ file:///tmp/build/80754af9/send2trash_1632406701022/work
-six @ file:///tmp/build/80754af9/six_1644875935023/work
+Send2Trash
+six
 sklearn==0.0
 smmap==5.0.0
-sniffio @ file:///C:/ci/sniffio_1614030522573/work
-soupsieve @ file:///tmp/build/80754af9/soupsieve_1636706018808/work
+sniffio 
+soupsieve
 streamlit==1.13.0
 streamlit-vega-lite==0.1.0
-terminado @ file:///C:/ci/terminado_1644322782754/work
-testpath @ file:///C:/Windows/TEMP/abs_23c7fa33-cbb9-46dc-b7c5-590c38e2de3d4bmbngal/croots/recipe/testpath_1655908553202/work
-threadpoolctl==3.1.0
+terminado
+testpath 
 toml==0.10.2
 toolz==0.12.0
-tornado @ file:///C:/ci/tornado_1662476933490/work
+tornado 
 traitlets==5.3.0
-typing_extensions @ file:///C:/Windows/TEMP/abs_dd2d0moa85/croots/recipe/typing_extensions_1659638831135/work
+typing_extensions 
 tzdata==2022.2
 tzlocal==4.2
-urllib3 @ file:///C:/Windows/TEMP/abs_65ynz4fdmi/croots/recipe/urllib3_1659110473919/work
+urllib3
 validators==0.20.0
 watchdog==2.1.9
-wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
+wcwidth
 webencodings==0.5.1
-websocket-client @ file:///C:/ci/websocket-client_1614804293275/work
+websocket-client 
 widgetsnbextension==4.0.2
-win-inet-pton @ file:///C:/ci/win_inet_pton_1605306165655/work
+win-inet-pton
 wincertstore==0.2
 zipp==3.8.1
