--- a/requirements.txt
+++ b/requirements.txt
@@ -72,7 +72,7 @@ PySocks
 python-dateutil 
 pytz==2022.2.1
 pytz-deprecation-shim==0.1.0.post0
-pywin32==301
+pywin32
 pywinpty
 pyzmq==23.2.1
 rainflow==3.1.1
