--- a/requirements.txt
+++ b/requirements.txt
@@ -71,7 +71,7 @@ pyrsistent==0.18.1
 PySocks
 python-dateutil 
 pytz==2022.2.1
-pytz-deprecation-shim==0.1.0.post0
+pytz-deprecation-shim==0.1.0
 pywin32
 pywinpty
 pyzmq==23.2.1
