--- a/requirements.txt
+++ b/requirements.txt
@@ -1,108 +1,92 @@
-altair==4.2.0
-anyio
-argon2-cffi
-argon2-cffi-bindings
-attrs==22.1.0
-Babel
-backcall
+altair==4.1.0
+appnope==0.1.2
+argon2-cffi==21.1.0
+astor==0.8.1
+attrs==21.2.0
+backcall==0.2.0
 backports.zoneinfo==0.2.1
-beautifulsoup4
-bleach 
-blinker==1.5
-brotlipy==0.7.0
-cachetools==5.2.0
-certifi 
-cffi 
-charset-normalizer==2.1.1
-click==8.1.3
-commonmark==0.9.1
-cryptography
-cycler==0.11.0
-debugpy==1.6.3
-decorator 
-defusedxml 
-entrypoints 
-et-xmlfile==1.1.0
-fastjsonschema 
-fonttools==4.37.1
-gitdb==4.0.9
-GitPython==3.1.27
-idna
-importlib-metadata==4.12.0
-importlib-resources==5.9.0
-ipykernel
-ipython==7.34.0
-ipython-genutils
-ipywidgets==8.0.1
-jedi 
-Jinja2==3.1.2 
-kiwisolver==1.4.4
-MarkupSafe
-matplotlib==3.5.3
-matplotlib-inline
-mistune
-nbclassic
-nbclient
-nbconvert 
-nbformat
-nest-asyncio
-notebook 
-numpy==1.21.6
-openpyxl==3.0.10
-packaging
-pandas==1.3.5
-pandocfilters
-parso
-pickleshare 
-Pillow==9.2.0
-pkgutil_resolve_name 
-prometheus-client 
-prompt-toolkit==3.0.30
-protobuf==3.20.1
-psutil==5.9.1
-pyarrow==9.0.0
-pycparser 
-pydeck==0.7.1
-Pygments==2.13.0
-Pympler==1.0.1
-pyOpenSSL
-pyparsing 
-pyrsistent==0.18.1
-PySocks
-python-dateutil 
-pytz==2022.2.1
-pytz-deprecation-shim==0.1.0
-pyzmq==23.2.1
-rainflow==3.1.1
-requests
-rich==12.5.1
-scikit-learn==1.0.2
-scipy==1.7.3
-semver==2.13.0
-Send2Trash
-six
-sklearn==0.0
-smmap==5.0.0
-sniffio 
-soupsieve
-streamlit==1.13.0
-streamlit-vega-lite==0.1.0
-terminado
-testpath 
+base58==2.1.0
+beautifulsoup4==4.10.0
+bleach==4.1.0
+blinker==1.4
+bokeh==2.4.0
+bs4==0.0.1
+cachetools==4.2.2
+certifi==2021.5.30
+cffi==1.14.6
+charset-normalizer==2.0.6
+click==7.1.2
+debugpy==1.4.3
+decorator==5.1.0
+defusedxml==0.7.1
+entrypoints==0.3
+finance-datareader==0.9.31
+gitdb==4.0.7
+GitPython==3.1.24
+idna==3.2
+ipykernel==6.4.1
+ipython==7.27.0
+ipython-genutils==0.2.0
+ipywidgets==7.6.5
+jedi==0.18.0
+Jinja2==3.0.1
+jsonschema==3.2.0
+jupyter-client==7.0.3
+jupyter-core==4.8.1
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.2
+lxml==4.6.3
+MarkupSafe==2.0.1
+matplotlib-inline==0.1.3
+mistune==0.8.4
+nbclient==0.5.4
+nbconvert==6.1.0
+nbformat==5.1.3
+nest-asyncio==1.5.1
+notebook==6.4.4
+numpy==1.21.2
+packaging==21.0
+pandas==1.3.3
+pandocfilters==1.5.0
+parso==0.8.2
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==8.3.2
+prometheus-client==0.11.0
+prompt-toolkit==3.0.20
+protobuf==3.18.0
+ptyprocess==0.7.0
+pyarrow==5.0.0
+pycparser==2.20
+pydeck==0.7.0
+Pygments==2.10.0
+pyparsing==2.4.7
+pyrsistent==0.18.0
+python-dateutil==2.8.2
+pytz==2021.1
+PyYAML==5.4.1
+pyzmq==22.3.0
+requests==2.26.0
+requests-file==1.5.1
+Send2Trash==1.8.0
+six==1.16.0
+smmap==4.0.0
+soupsieve==2.2.1
+streamlit==1.0.0
+terminado==0.12.1
+testpath==0.5.0
 toml==0.10.2
-toolz==0.12.0
-tornado 
-traitlets==5.3.0
-typing_extensions 
-tzdata==2022.2
-tzlocal==4.2
-urllib3
-validators==0.20.0
-watchdog==2.1.9
-wcwidth
+toolz==0.11.1
+tornado==6.1
+tqdm==4.62.3
+traitlets==5.1.0
+typing-extensions==3.10.0.2
+tzlocal==3.0
+urllib3==1.26.7
+validators==0.18.2
+wcwidth==0.2.5
 webencodings==0.5.1
-websocket-client 
-widgetsnbextension==4.0.2
-win-inet-pton
-wincertstore==0.2
-zipp==3.8.1
+widgetsnbextension==3.5.1
+XlsxWriter==3.0.1
+plotly==5.3.1
+rainflow
